fix(signup): makes buttons in signup fully visible at minimum screen size on Windows machines.

--- a/src/styles/views/signup.scss
+++ b/src/styles/views/signup.scss
@@ -3,7 +3,7 @@
 
   @media (max-height: $minimum-screen-height) {
     img {
-      margin: $margin-default 0 24px;
+      margin: $margin-small 0 $margin-default;
     }
 
     .rt-input-input {
